Basic setup is ready

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello!</h1>
+<!doctype html>
+<html>
+  <head>
+    <title>@bartsis</title>
+  </head>
+  <body ng-app="myPage">
+    <div ng-view></div>
+    <script src="dist/bundle.js"></script>
+  </body>
+</html>
