--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="dist/bundle.css" />
     <title>@bartsis</title>
   </head>
   <body ng-app="myPage">
     <div ng-view></div>
     <script src="dist/bundle.js"></script>
+    <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+      api_key: 78khio5vckiotr
+      authorize: true
+      onLoad: storeDataFromLinkedIN
+    </script>
+    <script type="text/javascript">
+      function storeDataFromLinkedIN(){
+        IN.API.Profile("me")
+          .fields(["firstName", "lastName","maidenName","formattedName","location","positions","picture-urls::(original)", "headline", "summary"])
+          .result(function(result) {
+            if(localStorage){
+              localStorage['linkedinProfile'] = JSON.stringify(result.values[0]);
+            }
+          });
+      }
+    </script>
   </body>
 </html>
