--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <link rel="stylesheet" href="dist/bundle.css" />
     <title>@bartsis</title>
   </head>
-  <body ng-app="myPage" class="main-background" style="background-image : url('{{backgroundUrl}}')">
-    <div layout="row" layout-xs="column" layout-align="center center" class="main-background" style="background-image : url('{{backgroundUrl}}')">
-      <div flex="75" id="views" layout-padding>
-        <div ng-view></div>
-      </div>
-    </div>
+  <body>
     <script src="dist/bundle.js"></script>
     <script type="text/javascript" src="http://platform.linkedin.com/in.js">
       api_key: 78khio5vckiotr
@@ -18,27 +13,13 @@
       onLoad: storeDataFromLinkedIN
     </script>
     <script type="text/javascript">
+      if(window.localStorage) window.localStorage.setItem('linkedinProfile','');
       function storeDataFromLinkedIN(){
         IN.API.Profile("me")
           .fields(["firstName", "lastName","maidenName","formattedName","location","positions","picture-urls::(original)", "headline", "summary"])
           .result(function(result) {
-            if(localStorage){
-              var positionsLength = result.values[0].positions._total,
-                  temp = []
-                  positions = [];
-
-              for(var i = 0 ; i < positionsLength / 2 ; i++){
-                temp.push(result.values[0].positions.values[i]);
-              }
-              positions.push(temp);
-              temp = [];
-              for(var i = parseInt(positionsLength / 2) ; i < positionsLength ; i++){
-                temp.push(result.values[0].positions.values[i]);
-              }
-              positions.push(temp);
-
-              result.values[0].positions.values = positions;
-              localStorage['linkedinProfile'] = JSON.stringify(result.values[0]);
+            if(window.localStorage){
+              window.localStorage.setItem('linkedinProfile',JSON.stringify(result.values[0]));
             }
           });
       }
