Adding Loading view

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>@bartsis</title>
   </head>
   <body>
-    <script src="dist/bundle.js"></script>
+    <div id="my-page">
+    </div>
     <script type="text/javascript" src="http://platform.linkedin.com/in.js">
       api_key: 78khio5vckiotr
       authorize: true
@@ -24,5 +25,6 @@
           });
       }
     </script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
