--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>@bartsis</title>
   </head>
   <body>
-    <div id="my-page">
+    <div id="my-page" class="container center-content">
     </div>
     <script type="text/javascript" src="http://platform.linkedin.com/in.js">
       api_key: 78khio5vckiotr
