--- a/app/app.html
+++ b/app/app.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@bartsis</title>
-  <link href="dist/bundle.css" rel="stylesheet"></head>
+  </head>
   <body>
     <div id="my-page" class="container center-content">
     </div>
@@ -24,5 +24,5 @@
           });
       }
     </script>
-  <script src="dist/bundle.js"></script></body>
+  </body>
 </html>
