--- a/app/app.html
+++ b/app/app.html
@@ -17,7 +17,7 @@
     <title>@bartsis</title>
   </head>
   <body>
-    <div id="my-page" class="container center-content">
+    <div id="my-page">
     </div>
   </body>
 </html>
