--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="JC Gomez">
     <title>@bartsis</title>
-  <link href="dist/main.css" rel="stylesheet"></head>
+  <link href="main.css" rel="stylesheet"></head>
   <body>
     <div id="my-page" class="container center-content">
     </div>
-  <script type="text/javascript" src="dist/main.js"></script></body>
+  <script type="text/javascript" src="main.js"></script></body>
 </html>
