Search basic functionallity has been applied

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>@bartsis</title>
   <link href="main.css" rel="stylesheet"></head>
   <body>
-    <div id="my-page" class="container center-content">
+    <div id="my-page">
     </div>
   <script type="text/javascript" src="main.js"></script></body>
 </html>
