--- a/app/app.html
+++ b/app/app.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="http://brion25.github.io">
     <meta property="og:description" content="I'm that kind of person who tries to follow the best practices to ensure the best software possible; who usually writes on his personal blog about new Frameworks/Libraries or existing ones, who is always creating new stuff on his plunker, fiddler or jsbin. I'm also autodidact, responsible and charismatic.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+    <meta property="og:image" content="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAeQAAAAJDAyNDhiZjk5LTMyMWYtNGJlYi1hMzE1LTQ5NWI5ZjI4MjBkYQ.jpg" />
     <meta charset="utf-8">
     <meta name="description" content="I'm that kind of person who tries to follow the best practices to ensure the best software possible; who usually writes on his personal blog about new Frameworks/Libraries or existing ones, who is always creating new stuff on his plunker, fiddler or jsbin. I'm also autodidact, responsible and charismatic.">
     <meta name="robots" content="index, nofollow">
