--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!doctype html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/><link rel="stylesheet" href="/my-page.2.0.0.css"/><link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"></head><body><div id="root"></div><div id="particles-js"></div><script src="/my-page.2.0.0.js"></script></body>
+<!doctype html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/><link rel="stylesheet" href="/my-page.2.0.0.css"/>
+            <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+            <meta property='og:title' content="Brion25 WebSite"/>
+            <meta property='og:image' content="https://raw.githubusercontent.com/brion25/brion25.github.io/master/src/common/assets/cara.png"/>
+            <meta property='og:description' content="I'm a JavaScript Ninja focused on developing the most proficient and scalable WebApps"/>
+            <meta property='og:url' content="http://brion25.github.io/" />
+            </head><body><div id="root"></div><div id="particles-js"></div><script src="/my-page.2.0.0.js"></script></body>
