--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rollup</title>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -16,6 +18,7 @@
         my-app {
             width: 100%;
             height: 100%;
+            font-family: 'Dosis', sans-serif;
         }
     </style>
     <!-- <link rel="stylesheet" href="static/r-bundle.css" /> -->
